2017-09-17  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Fix crash if MM and non-MM fonts are viewed together.

	* src/ftgrid.c (event_font_change): Reset `status.mm' after
	deallocation.

2017-09-16  Werner Lemberg  <wl@gnu.org>

	* Version 2.8.1 released.
	=========================


	Tag sources with `VER-2-8-1.

	* README: Updated.
	* src/*.1: Updated.
	* src/ftinspect/ftinspect.pro: Updated.

2017-09-10  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftdump.c (main): Remove unnecessary `printf'.

2017-09-10  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Key `C' now changes to a different color palette.

	This gives better support for color-blind people.

	* src/ftgrid.c (GridStatus): New member `do_alt_colors'.
	(grid_status_init, event_help): Updated.
	(grid_status_display): Move color code to...
	(grid_status_colors): ... this new function.
	(grof_status_alt_colors): New function.
	(Process_Event): Handle key `C'.
	(main): Updated.

2017-09-09  Werner Lemberg  <wl@gnu.org>

	Fix clang compiler warnings.

	* src/ftcommon.c (PanicZ): Use `const'.
	(FTDemo_Draw_Header): Add a cast.

	* src/ftdump.c (PanicZ): Use `const'.

2017-09-09  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Key `G' now toggles the display of grid lines.

	* src/ftgrid.c (GridStatus): New member `do_grid'.
	(grid_status_init, event_help): Updated.
	(grid_status_draw_outline, main): Use `do_grid'.
	(Process_Event): Handle key `G'.

2017-09-09  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Fix display of segment lines.

	`af_glyph_hints_get_segment_offset' now returns values in font
	units.  Previously, values were scaled to the device resolution but
	with x height correction applied, which caused a mismatch to the
	displayed unhinted outlines.

	* src/ftgrid.c (grid_hint_draw_segment): Add new argument for
	`FT_Size' object.
	Scale return values of `af_glyph_hints_get_segment_offset' manually.
	(grid_status_draw_outline): Updated.

2017-09-06  Alexei Podtelezhnikov  <apodtele@gmail.com>
