@@ -80,8 +80,13 @@ Common values:
 .BI "\-d\ \(dq" "axis1\ axis2\ .\|.\|." \(dq
 For Multiple Master, GX, or OpenType variation fonts, specify design
 coordinates for each axis at start-up.
-If this option is given, no named instances are shown.
+This option implies option
+.BR \-n .
 Ignored for all other font formats.
+.
+.TP
+.B \-n
+Don't display named instances of variation fonts.
 .
 .TP
 .B \-v
